crates/syntax/tests/snapshots/parser__parser_method call.snap
---
source: crates/syntax/tests/parser.rs
expression: parse(tokens.as_slice())
---
Ok(
    SourceFile {
        span: 0..9,
        statements: StatementList {
            span: 0..9,
            extras: ItemExtras {
                leading: LeadingExtras(
                    [],
                ),
                trailing: TrailingExtras(
                    [],
                ),
            },
            statements: [],
            tail: Some(
                Expression(
                    ExpressionStatement {
                        span: 0..9,
                        extras: ItemExtras {
                            leading: LeadingExtras(
                                [],
                            ),
                            trailing: TrailingExtras(
                                [],
                            ),
                        },
                        attributes: [],
                        expression: ElementAccess(
                            ElementAccess {
                                span: 0..9,
                                value: QualifiedName(
                                    QualifiedName {
                                        span: 0..3,
                                        extras: ItemExtras {
                                            leading: LeadingExtras(
                                                [],
                                            ),
                                            trailing: TrailingExtras(
                                                [],
                                            ),
                                        },
                                        parts: [
                                            Identifier {
                                                span: 0..3,
                                                name: "foo",
                                            },
                                        ],
                                    },
                                ),
                                element_chain: [
                                    Element {
                                        span: 3..9,
                                        extras: ItemExtras {
                                            leading: LeadingExtras(
                                                [],
                                            ),
                                            trailing: TrailingExtras(
                                                [],
                                            ),
                                        },
                                        inner: Method(
                                            Call {
                                                span: 4..9,
                                                extras: ItemExtras {
                                                    leading: LeadingExtras(
                                                        [],
                                                    ),
                                                    trailing: TrailingExtras(
                                                        [],
                                                    ),
                                                },
                                                name: QualifiedName {
                                                    span: 4..7,
                                                    extras: ItemExtras {
                                                        leading: LeadingExtras(
                                                            [],
                                                        ),
                                                        trailing: TrailingExtras(
                                                            [],
                                                        ),
                                                    },
                                                    parts: [
                                                        Identifier {
                                                            span: 4..7,
                                                            name: "bar",
                                                        },
                                                    ],
                                                },
                                                arguments: ArgumentList {
                                                    span: 8..8,
                                                    extras: ItemExtras {
                                                        leading: LeadingExtras(
                                                            [],
                                                        ),
                                                        trailing: TrailingExtras(
                                                            [],
                                                        ),
                                                    },
                                                    arguments: [],
                                                },
                                            },
                                        ),
                                    },
                                ],
                            },
                        ),
                    },
                ),
            ),
        },
    },
)
