crates/syntax/tests/snapshots/parser__parser_mod extern.snap
---
source: crates/syntax/tests/parser.rs
expression: parse(tokens.as_slice())
---
Ok(
    SourceFile {
        span: 0..8,
        statements: StatementList {
            span: 0..8,
            extras: ItemExtras {
                leading: LeadingExtras(
                    [],
                ),
                trailing: TrailingExtras(
                    [],
                ),
            },
            statements: [
                (
                    Module(
                        ModuleDefinition {
                            span: 0..8,
                            keyword_span: 0..3,
                            extras: ItemExtras {
                                leading: LeadingExtras(
                                    [],
                                ),
                                trailing: TrailingExtras(
                                    [],
                                ),
                            },
                            doc: None,
                            attributes: [],
                            visibility: None,
                            name: Identifier {
                                span: 4..7,
                                name: "foo",
                            },
                            body: None,
                        },
                    ),
                    TrailingExtras(
                        [],
                    ),
                ),
            ],
            tail: None,
        },
    },
)
