crates/syntax/tests/snapshots/parser__parser_mod pub.snap
---
source: crates/syntax/tests/parser.rs
expression: parse(tokens.as_slice())
---
Ok(
    SourceFile {
        span: 0..26,
        statements: StatementList {
            span: 0..26,
            extras: ItemExtras {
                leading: [],
                trailing: [],
            },
            statements: [
                (
                    Module(
                        ModuleDefinition {
                            span: 0..26,
                            keyword_span: 4..7,
                            extras: ItemExtras {
                                leading: [],
                                trailing: [],
                            },
                            doc: None,
                            attributes: [],
                            visibility: Some(
                                Public,
                            ),
                            name: Identifier {
                                span: 8..11,
                                name: "foo",
                            },
                            body: Some(
                                Body {
                                    span: 12..26,
                                    statements: StatementList {
                                        span: 13..25,
                                        extras: ItemExtras {
                                            leading: [
                                                Whitespace(
                                                    " ",
                                                ),
                                            ],
                                            trailing: [],
                                        },
                                        statements: [
                                            (
                                                Function(
                                                    FunctionDefinition {
                                                        span: 14..25,
                                                        keyword_span: 14..16,
                                                        extras: ItemExtras {
                                                            leading: [],
                                                            trailing: [
                                                                Whitespace(
                                                                    " ",
                                                                ),
                                                            ],
                                                        },
                                                        doc: None,
                                                        attributes: [],
                                                        visibility: None,
                                                        name: Identifier {
                                                            span: 17..20,
                                                            name: "bar",
                                                        },
                                                        parameters: ParameterList {
                                                            span: 21..21,
                                                            extras: ItemExtras {
                                                                leading: [],
                                                                trailing: [],
                                                            },
                                                            parameters: [],
                                                        },
                                                        return_type: None,
                                                        body: Body {
                                                            span: 22..24,
                                                            statements: StatementList {
                                                                span: 23..23,
                                                                extras: ItemExtras {
                                                                    leading: [],
                                                                    trailing: [],
                                                                },
                                                                statements: [],
                                                                tail: None,
                                                            },
                                                        },
                                                    },
                                                ),
                                                [],
                                            ),
                                        ],
                                        tail: None,
                                    },
                                },
                            ),
                        },
                    ),
                    [],
                ),
            ],
            tail: None,
        },
    },
)
