crates/syntax/tests/snapshots/parser__parser_mod.snap
---
source: crates/syntax/tests/parser.rs
expression: parse(tokens.as_slice())
---
Ok(
    SourceFile {
        span: 0..22,
        statements: StatementList {
            span: 0..22,
            extras: ItemExtras {
                leading: [],
                trailing: [],
            },
            statements: [
                (
                    Module(
                        ModuleDefinition {
                            span: 0..22,
                            keyword_span: 0..3,
                            extras: ItemExtras {
                                leading: [],
                                trailing: [],
                            },
                            doc: None,
                            attributes: [],
                            visibility: None,
                            name: Identifier {
                                span: 4..7,
                                name: "foo",
                            },
                            body: Some(
                                Body {
                                    span: 8..22,
                                    statements: StatementList {
                                        span: 9..21,
                                        extras: ItemExtras {
                                            leading: [
                                                Whitespace(
                                                    " ",
                                                ),
                                            ],
                                            trailing: [],
                                        },
                                        statements: [
                                            (
                                                Function(
                                                    FunctionDefinition {
                                                        span: 10..21,
                                                        keyword_span: 10..12,
                                                        extras: ItemExtras {
                                                            leading: [],
                                                            trailing: [
                                                                Whitespace(
                                                                    " ",
                                                                ),
                                                            ],
                                                        },
                                                        doc: None,
                                                        attributes: [],
                                                        visibility: None,
                                                        name: Identifier {
                                                            span: 13..16,
                                                            name: "bar",
                                                        },
                                                        parameters: ParameterList {
                                                            span: 17..17,
                                                            extras: ItemExtras {
                                                                leading: [],
                                                                trailing: [],
                                                            },
                                                            parameters: [],
                                                        },
                                                        return_type: None,
                                                        body: Body {
                                                            span: 18..20,
                                                            statements: StatementList {
                                                                span: 19..19,
                                                                extras: ItemExtras {
                                                                    leading: [],
                                                                    trailing: [],
                                                                },
                                                                statements: [],
                                                                tail: None,
                                                            },
                                                        },
                                                    },
                                                ),
                                                [],
                                            ),
                                        ],
                                        tail: None,
                                    },
                                },
                            ),
                        },
                    ),
                    [],
                ),
            ],
            tail: None,
        },
    },
)
