crates/syntax/tests/snapshots/parser__parser_multi line comment.snap
---
source: crates/syntax/tests/parser.rs
expression: parse(tokens.as_slice())
---
Ok(
    SourceFile {
        span: 0..55,
        statements: StatementList {
            span: 0..55,
            extras: ItemExtras {
                leading: [],
                trailing: [],
            },
            statements: [
                LocalAssignment(
                    LocalAssignment {
                        span: 0..5,
                        extras: ItemExtras {
                            leading: [],
                            trailing: [],
                        },
                        attributes: [],
                        name: Identifier {
                            span: 0..1,
                            name: "a",
                        },
                        ty: None,
                        value: Literal(
                            Literal {
                                span: 4..5,
                                extras: ItemExtras {
                                    leading: [],
                                    trailing: [],
                                },
                                literal: Integer(
                                    IntegerLiteral {
                                        span: 4..5,
                                        value: 1,
                                    },
                                ),
                            },
                        ),
                    },
                ),
                Comment(
                    Comment {
                        span: 7..44,
                        lines: [
                            "multi\n    line\n    comment",
                        ],
                    },
                ),
                LocalAssignment(
                    LocalAssignment {
                        span: 49..54,
                        extras: ItemExtras {
                            leading: [],
                            trailing: [],
                        },
                        attributes: [],
                        name: Identifier {
                            span: 49..50,
                            name: "b",
                        },
                        ty: None,
                        value: Literal(
                            Literal {
                                span: 53..54,
                                extras: ItemExtras {
                                    leading: [],
                                    trailing: [],
                                },
                                literal: Integer(
                                    IntegerLiteral {
                                        span: 53..54,
                                        value: 2,
                                    },
                                ),
                            },
                        ),
                    },
                ),
            ],
            tail: None,
        },
    },
)
